--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fontenla-quest-api",
+  "name": "mailing-api",
   "version": "1.0.0",
-  "description": "API para Quest corporativo de Fontenla",
+  "description": "API para Enviar mails",
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
@@ -9,20 +9,18 @@
   },
   "author": "Agustín Narvaez",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.474.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "moment": "^2.29.4",
-    "mongoose": "^7.5.1",
-    "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
   "type": "module",
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
